# TancaDataAcquisition

./: CMakeLists.txt  LICENSE  README.md
include/: Arduino.h  ArduinoData.h  CollectorConfig.h  ConfigHandler.h  DataCollector.h  DigitizerConfig.h  DigitizerData.h  DigitizerWrapper.h  ErrorHandler.h  RateCalculator.h  RootTreeWriter.h  SettingsWidget.h  TSQueue.h  TimeTagHandler.h  Window.h
src/: Arduino.cpp  ConfigHandler.cpp  DataCollector.cpp  DigitizerWrapper.cpp  ErrorHandler.cpp  RootTreeWriter.cpp  SettingsWidget.cpp  TimeTagHandler.cpp  Window.cpp  main.cpp
